Fixing performance issues.
Updated ActiveMQ to 5.4.1.
Added memory configuration to JWS.
Changed engine for MySQL outbound_sms table script to MyISAM, it was InnoDB.
Fixed some tests.